Декоративные элементы на главной странице (правки #3)

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <a href="">
             <h3>Виртуальная реальность</h3>
             <p>
-              <img src="img/popular-1.svg" width="97" height="55" alt="Раздел «Виртуальная реальность»">
+              <img class="popular" src="img/popular-1.svg" width="97" height="55" alt="Раздел «Виртуальная реальность»">
             </p>
           </a>
         </li>
@@ -178,7 +178,7 @@
           <a href="">
             <h3>Моноподы<br> для селфи</h3>
             <p>
-              <img src="img/popular-2.svg" width="86" height="117" alt="Раздел «Моноподы для селфи»">
+              <img class="popular" src="img/popular-2.svg" width="86" height="117" alt="Раздел «Моноподы для селфи»">
             </p>
           </a>
         </li>
@@ -186,7 +186,7 @@
           <a href="">
             <h3>Экшн-камеры</h3>
             <p>
-              <img src="img/popular-3.svg" width="71" height="87" alt="Раздел «Экшн-камеры»">
+              <img class="popular" src="img/popular-3.svg" width="71" height="87" alt="Раздел «Экшн-камеры»">
             </p>
           </a>
         </li>
@@ -194,7 +194,7 @@
           <a href="">
             <h3>Фитнес-браслеты</h3>
             <p>
-              <img src="img/popular-4.svg" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
+              <img class="popular" src="img/popular-4.svg" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
             </p>
           </a>
         </li>
@@ -202,7 +202,7 @@
           <a href="">
             <h3>Умные часы</h3>
             <p>
-              <img src="img/popular-5.svg" width="56" height="98" alt="Раздел «Умные часы»">
+              <img class="popular" src="img/popular-5.svg" width="56" height="98" alt="Раздел «Умные часы»">
             </p>
           </a>
         </li>
@@ -210,7 +210,7 @@
           <a href="">
             <h3>Квадрокоптеры</h3>
             <p>
-              <img src="img/popular-6.svg" width="132" height="69" alt="">
+              <img class="popular" src="img/popular-6.svg" width="132" height="69" alt="">
             </p>
           </a>
         </li>
@@ -226,8 +226,8 @@
         <div class="services-description-navigation">
           <nav>
             <a class="button services-button delivery-services-button" href="#">Доставка</a>
-            <a class="button services-button warranty-services-button" href="#">Гарантия</a>
-            <a class="button services-button credit-services-button" href="#">Кредит</a>
+            <a class="button services-button warranty-services-button yellow-services-button" href="#">Гарантия</a>
+            <a class="button services-button credit-services-button yellow-services-button" href="#">Кредит</a>
           </nav>
         </div>
 
@@ -312,7 +312,7 @@
           <li>ЖелДорЭкспедиция</li>
         </ul>
         <p>
-          <a class="button about-us-button" href="">Подробнее о нас</a>
+          <a class="button about-company-button" href="">Подробнее о нас</a>
         </p>
       </section>
 
@@ -324,10 +324,10 @@
         </p>
         <a
           href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
-          <img src="img/map 1.png" width="560" height="222" alt="Схема проезда">
+          <img class="map" src="img/map 1.png" width="560" height="222" alt="Схема проезда">
         </a>
         <p class="contacts">
-          <a class="button contacts-company-button" href="">Напишите нам</a>
+          <a class="button about-company-button" href="">Напишите нам</a>
         </p>
       </section>
     </div>
