Сетка на флексах для внутренней страницы + Декоративные элементы на главной странице (правки #4)

--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
       <div class="footer-conteiner-wrapper-3">
         <div class="footer-user-navigation-wrapper">
           <ul class="footer-user-navigation">
-            <li><a class="login-link" href="">Войти</a></li>
-            <li><a class="compare-list" href="">Сравнить</a></li>
-            <li><a class="basket" href="">Корзина</a></li>
+            <li><a class="login-link login-link-yellow" href="">Войти</a></li>
+            <li><a class="compare-list compare-list-yellow" href="">Сравнить</a></li>
+            <li><a class="basket basket-yellow" href="">Корзина</a></li>
           </ul>
         </div>
         <p class="phone">Тел.: +7 (495) 495-95-95</p>
