--- a/catalog.html
+++ b/catalog.html
@@ -12,52 +12,52 @@
 
   <header class="main-header">
     <div class="main-navigation-wrapper">
-    <nav class="main-navigation">
-      <a href="index.html">
-        <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-      </a>
-      <!--
+      <nav class="main-navigation">
+        <a href="index.html">
+          <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        </a>
+        <!--
     <form>
       <input type="text" placeholder="Поиск по сайту">
       <button type="submit"></button>
     </form>
       -->
-      <ul class="site-navigation">
-        <li><a href="catalog.html">Каталог товаров</a>
-          <ul class="product-navigation">
-            <li><a href="">Виртуальная реальность</a></li>
-            <li><a>Моноподы для селфи</a></li>
-            <li><a href="">Экшн-камеры</a></li>
-            <li><a href="">Фитнес-браслеты</a></li>
-            <li><a href="">Умные часы</a></li>
-            <li><a href="">Квадрокоптер</a></li>
-          </ul>
-        </li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Гарантия</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-      <ul class="user-navigation">
-        <li><a href="">Валентин Петухов</a></li>
-        <li><a href="">Выйти</a></li>
-        <li><a href="">Сравнить</a></li>
-        <li><a href="">Корзина</a></li>
-      </ul>
-    </nav>
-  </div>
+        <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог товаров</a>
+            <ul class="product-navigation">
+              <li><a href="">Виртуальная реальность</a></li>
+              <li><a>Моноподы для селфи</a></li>
+              <li><a href="">Экшн-камеры</a></li>
+              <li><a href="">Фитнес-браслеты</a></li>
+              <li><a href="">Умные часы</a></li>
+              <li><a href="">Квадрокоптер</a></li>
+            </ul>
+          </li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li><a href="">Валентин Петухов</a></li>
+          <li><a href="">Выйти</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="page-catalog-container">
 
     <div class="title-conteiner">
-    <h1 class="page-catalog-title">Моноподы для селфи</h1>
-    <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
-      <li><a href="catalog.html">Каталог товаров</a></li>
-      <li><a>Моноподы для селфи</a></li>
-    </ul>
+      <h1 class="page-catalog-title">Моноподы для селфи</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог товаров</a></li>
+        <li><a>Моноподы для селфи</a></li>
+      </ul>
     </div>
-    
+
     <section class="catalog-section">
       <h2 class="visually-hidden">Перечень товаров - моноподы</h2>
 
@@ -68,87 +68,90 @@
 
       <div class="sorting">
         <h3 class="page-catalog-subtitle">Сортировка</h3>
-        <ul>
+        <ul class="sorting-item">
           <li class="sort-by-price"><a href="">По цене</a></li>
-          <li><a href="">По типу</a></li>
-          <li><a href="">По популярности</a></li>
-          <li><a href="">Сортировать по возрастанию</a></li>
-          <li><a href="">Сортировать по убыванию</a></li>
+          <li class="sort-by-type"><a href="">По типу</a></li>
+          <li class="sort-by-popularity"><a href="">По популярности</a></li>
+          <li class="up-dir"><a href="">Сортировать по возрастанию</a></li>
+          <li class="down-dir"><a href="">Сортировать по убыванию</a></li>
         </ul>
       </div>
 
-      <div class="product-list">
+      <div class="product-list-wrapper"> <!--было product-list-->
         <h3 class="visually-hidden">Список товаров</h3>
-        <ul class="catalog-list">
-          <li class="catalog-category-item product1">
-            <a href="">
-              <h3>Любительская селфи-палка</h3>
-              <p>
-                <img src="img/item-1 1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
-              </p>
-            </a>
-            <p class="price">500 руб.</p>
-            <div>
+        <ul class="product-list"> <!--было catalog-list-->
+          <li class="product-list-item"> <!--было catalog-category-item-->
+            <div class="layer-1">
+              <div class="description">
+                <a href="">Любительская селфи-палка</a>
+                <span class="price">500 руб.</span>
+              </div>
+              <img src="img/item-1 1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
+            </div>
+            <div class="layer-2">
               <button type="button" class="button">В корзину</button>
               <button type="button" class="compare">Добавить к сравнению</button>
             </div>
           </li>
-          <li class="catalog-category-item">
-            <a href="">
-              <h3>Профессиональная селфи-палка</h3>
-              <p>
-                <img src="img/item-2 1.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
-              </p>
-            </a>
-            <p class="price">1500 руб.</p>
-            <div>
+
+          <li class="product-list-item">
+            <div class="layer-1">
+              <div class="description">
+                <a href="">Профессиональная селфи-палка</a>
+                <span class="price">1500 руб.</span>
+              </div>
+              <img src="img/item-2 1.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
+            </div>
+            <div class="layer-2">
               <button type="button" class="button">В корзину</button>
               <button type="button" class="compare">Добавить к сравнению</button>
             </div>
           </li>
-          <li class="catalog-category-item">
-            <a href="">
-              <h3>Непотопляемая селфи-палка</h3>
-              <p>
-                <img src="img/item-3 1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
-              </p>
-            </a>
-            <p class="price">2500 руб.</p>
-            <div>
+
+          <li class="product-list-item">
+            <div class="layer-1">
+              <div class="description">
+                <a href="">Непотопляемая селфи-палка</a>
+                <span class="price">2500 руб.</span>
+              </div>
+              <img src="img/item-3 1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
+            </div>
+            <div class="layer-2">
               <button type="button" class="button">В корзину</button>
               <button type="button" class="compare">Добавить к сравнению</button>
             </div>
           </li>
-          <li class="catalog-category-item">
-            <a href="">
-              <h3>Селфи-палка «Следуй за мной»</h3>
-              <p>
-                <img src="img/item-4 1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
-              </p>
-            </a>
-            <p class="price">4900 руб.</p>
-            <p>New</p>
-            <div>
+
+          <li class="product-list-item">
+            <div class="layer-1">
+              <div class="description">
+                <a href="">Селфи-палка «Следуй за мной»</a>
+                <span class="price">4900 руб.</span>
+              </div>
+              <img src="img/item-4 1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
+              <span class="new-label">New</span>
+            </div>
+            <div class="layer-2">
               <button type="button" class="button">В корзину</button>
               <button type="button" class="compare">Добавить к сравнению</button>
             </div>
           </li>
         </ul>
       </div>
-   
+
       <div class="page-navigation">
         <ul class="page-button">
-          <li><a href="" class="page-back">Назад</a></li>
-          <li><a class="page-number page-1">1</a></li>
-          <li><a href="" class="page-number">2</a></li>
-          <li><a href="" class="page-number">3</a></li>
-          <li><a href="" class="page-forward">Вперед</a></li>
+          <li><a class="page-back" href="">Назад</a></li>
+          <li><a class="page-number page-1" href="">1</a></li>
+          <li><a class="page-number" href="">2</a></li>
+          <li><a class="page-number" href="">3</a></li>
+          <li><a class="page-forward" href="">Вперед</a></li>
         </ul>
       </div>
 
     </section>
 
-    
+
 
   </main>
 
