--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
           <div class="site-navigation-wrapper">
             <ul class="site-navigation">
               <li class="catalog-button"><a href="catalog.html">Каталог товаров</a>
-                <!--
-            <ul class="product-navigation">
-              <li><a href="">Виртуальная реальность</a></li>
-              <li><a>Моноподы для селфи</a></li>
-              <li><a href="">Экшн-камеры</a></li>
-              <li><a href="">Фитнес-браслеты</a></li>
-              <li><a href="">Умные часы</a></li>
-              <li><a href="">Квадрокоптер</a></li>
-            </ul>
-            -->
+                
+                <ul class="product-navigation product-navigation-active">
+                  <li class="product-navigation-item"><a href="">Виртуальная реальность</a></li>
+                  <li class="product-navigation-item"><a href="">Фитнес-браслеты</a></li>
+                  <li class="product-navigation-item"><a href="">Квадрокоптер</a></li>
+                  <li class="product-navigation-item"><a>Моноподы для селфи</a></li>
+                  <li class="product-navigation-item"><a href="">Умные часы</a></li>
+                  <li class="product-navigation-item"><a href="">Экшн-камеры</a></li>
+                </ul>
+
               </li>
               <li><a href="">Доставка</a></li>
               <li><a href="">Гарантия</a></li>
@@ -36,10 +36,17 @@
             </ul>
           </div>
           <div class="user-navigation-wrapper">
-            <form class="search">
-              <input type="text" placeholder="Поиск по сайту">
-              <button type="submit"></button>
-            </form>
+
+            <div class="search-form">
+              <form class="search" action="https://echo.htmlacademy.ru" method="get">
+
+                <label class="visually-hidden search-label" for="search">Поиск по сайту</label>
+
+                <input class="search-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
+                <button class="search-button search-button-active" type="submit">Найти</button>
+
+              </form>
+            </div>
 
             <ul class="user-navigation">
               <li>
@@ -167,7 +174,7 @@
       <h2 class="visually-hidden">Каталог</h2>
       <ul class="catalog-category-list">
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link" href="">
             <h3>Виртуальная реальность</h3>
             <p>
               <img class="popular" src="img/popular-1.svg" width="97" height="55" alt="Раздел «Виртуальная реальность»">
@@ -175,7 +182,7 @@
           </a>
         </li>
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link" href="">
             <h3>Моноподы<br> для селфи</h3>
             <p>
               <img class="popular" src="img/popular-2.svg" width="86" height="117" alt="Раздел «Моноподы для селфи»">
@@ -183,7 +190,7 @@
           </a>
         </li>
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link" href="">
             <h3>Экшн-камеры</h3>
             <p>
               <img class="popular" src="img/popular-3.svg" width="71" height="87" alt="Раздел «Экшн-камеры»">
@@ -191,7 +198,7 @@
           </a>
         </li>
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link catalog-category-short-link" href="">
             <h3>Фитнес-браслеты</h3>
             <p>
               <img class="popular" src="img/popular-4.svg" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
@@ -199,7 +206,7 @@
           </a>
         </li>
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link" href="">
             <h3>Умные часы</h3>
             <p>
               <img class="popular" src="img/popular-5.svg" width="56" height="98" alt="Раздел «Умные часы»">
@@ -207,7 +214,7 @@
           </a>
         </li>
         <li class="catalog-category-item">
-          <a href="">
+          <a class="catalog-category-link" href="">
             <h3>Квадрокоптеры</h3>
             <p>
               <img class="popular" src="img/popular-6.svg" width="132" height="69" alt="">
@@ -340,14 +347,16 @@
         <a class="main-footer-logo">
           <svg width="163" height="35" viewBox="0 0 163 35" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M-0.151001 0.701993V34.302H13.381C15.5624 34.3553 17.7309 33.954 19.7487 33.1235C21.7665 32.2929 23.5892 31.0514 25.101 29.478C26.6506 27.9007 27.8665 26.0273 28.6761 23.9697C29.4857 21.912 29.8724 19.7124 29.813 17.502C29.8724 15.2916 29.4857 13.092 28.6761 11.0343C27.8665 8.97669 26.6506 7.1033 25.101 5.52599C23.5891 3.9527 21.7663 2.7113 19.7486 1.88079C17.7308 1.05028 15.5623 0.648834 13.381 0.701993H-0.151001ZM7.582 26.91V8.09099H13.382C14.5845 8.04309 15.7838 8.24675 16.903 8.68895C18.0223 9.13115 19.0369 9.80215 19.882 10.659C20.7304 11.5766 21.3875 12.6541 21.8149 13.8285C22.2422 15.0029 22.4313 16.2507 22.371 17.499C22.4313 18.7473 22.2423 19.9951 21.8149 21.1695C21.3876 22.3439 20.7305 23.4214 19.882 24.339C19.0371 25.196 18.0225 25.8672 16.9032 26.3094C15.7839 26.7516 14.5845 26.9551 13.382 26.907H7.582V26.91ZM42.382 20.958H54.464V13.658H42.378V8.09099H55.669V0.701993H34.645V34.302H55.91V26.91H42.378V20.958H42.382ZM78.725 34.302L89.744 0.701993H81.286L73.795 25.422L66.304 0.701993H57.847L68.866 34.302H78.725ZM93.125 34.302H100.858V0.701993H93.125V34.302ZM131.74 32.886C134.233 31.574 136.321 29.6076 137.781 27.198L131.111 23.358C130.381 24.659 129.279 25.7121 127.946 26.382C126.505 27.1262 124.903 27.504 123.282 27.482C121.962 27.5449 120.643 27.3343 119.408 26.8635C118.173 26.3927 117.048 25.6718 116.105 24.746C115.195 23.7791 114.489 22.6393 114.028 21.3942C113.568 20.1492 113.362 18.8242 113.423 17.498C113.362 16.1718 113.568 14.8468 114.028 13.6017C114.489 12.3567 115.195 11.2168 116.105 10.25C117.048 9.32422 118.173 8.60333 119.408 8.13252C120.643 7.6617 121.962 7.45113 123.282 7.51399C124.893 7.49098 126.486 7.86172 127.921 8.59399C129.263 9.2718 130.373 10.3326 131.111 11.642L137.781 7.80199C136.294 5.39746 134.191 3.43378 131.691 2.11399C129.109 0.720899 126.216 0.00268346 123.282 0.0259933C113.503 -0.246007 105.485 7.71699 105.691 17.498C105.483 27.279 113.5 35.245 123.279 34.974C126.229 35.0012 129.138 34.283 131.737 32.886H131.74ZM149.621 20.958H161.703V13.658H149.618V8.09099H162.908V0.701993H141.885V34.302H163.15V26.91H149.618V20.958H149.621Z" fill="#F0C52E"/>
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M-0.151001 0.701993V34.302H13.381C15.5624 34.3553 17.7309 33.954 19.7487 33.1235C21.7665 32.2929 23.5892 31.0514 25.101 29.478C26.6506 27.9007 27.8665 26.0273 28.6761 23.9697C29.4857 21.912 29.8724 19.7124 29.813 17.502C29.8724 15.2916 29.4857 13.092 28.6761 11.0343C27.8665 8.97669 26.6506 7.1033 25.101 5.52599C23.5891 3.9527 21.7663 2.7113 19.7486 1.88079C17.7308 1.05028 15.5623 0.648834 13.381 0.701993H-0.151001ZM7.582 26.91V8.09099H13.382C14.5845 8.04309 15.7838 8.24675 16.903 8.68895C18.0223 9.13115 19.0369 9.80215 19.882 10.659C20.7304 11.5766 21.3875 12.6541 21.8149 13.8285C22.2422 15.0029 22.4313 16.2507 22.371 17.499C22.4313 18.7473 22.2423 19.9951 21.8149 21.1695C21.3876 22.3439 20.7305 23.4214 19.882 24.339C19.0371 25.196 18.0225 25.8672 16.9032 26.3094C15.7839 26.7516 14.5845 26.9551 13.382 26.907H7.582V26.91ZM42.382 20.958H54.464V13.658H42.378V8.09099H55.669V0.701993H34.645V34.302H55.91V26.91H42.378V20.958H42.382ZM78.725 34.302L89.744 0.701993H81.286L73.795 25.422L66.304 0.701993H57.847L68.866 34.302H78.725ZM93.125 34.302H100.858V0.701993H93.125V34.302ZM131.74 32.886C134.233 31.574 136.321 29.6076 137.781 27.198L131.111 23.358C130.381 24.659 129.279 25.7121 127.946 26.382C126.505 27.1262 124.903 27.504 123.282 27.482C121.962 27.5449 120.643 27.3343 119.408 26.8635C118.173 26.3927 117.048 25.6718 116.105 24.746C115.195 23.7791 114.489 22.6393 114.028 21.3942C113.568 20.1492 113.362 18.8242 113.423 17.498C113.362 16.1718 113.568 14.8468 114.028 13.6017C114.489 12.3567 115.195 11.2168 116.105 10.25C117.048 9.32422 118.173 8.60333 119.408 8.13252C120.643 7.6617 121.962 7.45113 123.282 7.51399C124.893 7.49098 126.486 7.86172 127.921 8.59399C129.263 9.2718 130.373 10.3326 131.111 11.642L137.781 7.80199C136.294 5.39746 134.191 3.43378 131.691 2.11399C129.109 0.720899 126.216 0.00268346 123.282 0.0259933C113.503 -0.246007 105.485 7.71699 105.691 17.498C105.483 27.279 113.5 35.245 123.279 34.974C126.229 35.0012 129.138 34.283 131.737 32.886H131.74ZM149.621 20.958H161.703V13.658H149.618V8.09099H162.908V0.701993H141.885V34.302H163.15V26.91H149.618V20.958H149.621Z"
+                fill="#F0C52E" />
             </g>
             <defs>
-            <clipPath id="clip0">
-            <rect width="163" height="35" fill="white"/>
-            </clipPath>
+              <clipPath id="clip0">
+                <rect width="163" height="35" fill="white" />
+              </clipPath>
             </defs>
-            </svg>
+          </svg>
         </a>
         <p class="address">г. Москва, ул. Строителей, 15</p>
         <span></span>
@@ -417,6 +426,46 @@
 
     </div>
   </footer>
+
+  <section class="modal modal-feedback-form">
+    <h2 class="visually-hidden">Форма обратной связи</h2>
+
+    <div class="login-form-wrapper">
+      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+        <ul class="flex-outer">
+          <li class="flex-item">
+            <label class="username-label" for="username">Ваше имя:</label><br>
+            <input class="flex-item-input username-input" id="username" type="text" name="name"
+              placeholder="Имя Фамилия">
+          </li>
+
+          <li class="flex-item">
+            <label class="email-label" for="email">Ваш e-mail:</label><br>
+            <input class="flex-item-input email-input" id="email" type="email" name="email"
+              placeholder="email@example.com">
+          </li>
+
+          <li class="flex-item">
+            <label class="letter-label" for="letter">Текст письма:</label><br>
+            <textarea class="flex-item-input textarea-letter" id="letter" name="letter" cols="40" rows="7"
+              placeholder="В свободной форме"></textarea>
+          </li>
+          <button class="flex-item-button button" type="submit">Отправить</button>
+        </ul>
+      </form>
+    </div>
+
+    <button class="modal-close" type="button" aria-label="Закрыть"></button>
+
+  </section>
+
+  <section class="modal modal-map">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877.6491912262993!2d37.52965641830196!3d55.68734693925346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf6f5f5c4ad%3A0xbce6da52bb328417!2z0KjQutC-0LvQsCDihJYgMTE4!5e0!3m2!1sru!2sru!4v1604242799041!5m2!1sru!2sru" 
+    width="994" height="593" frameborder="0" allowfullscreen title="Офис компании по адресу г. Москва, ул. Строителей, д. 15" aria-hidden="false" tabindex="0"></iframe>
+
+    <button class="modal-close" type="button" aria-label="Закрыть"></button>
+  </section>
 
 </body>
 
