--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>HTML Academy: Девайс</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -70,7 +69,7 @@
     <h1 class="visually-hidden">Интернет-магазин «DEVICE»</h1>
 
     <section class="bestsellers">
-      <div class="slide-wrapper slide-wrapper-3">
+      <div class="slide-wrapper slide-wrapper-1">
         <h2 class="visually-hidden">Бестселлеры</h2>
         <ol class="bestsellers-list">
 
@@ -232,7 +231,7 @@
 
         <div class="services-description-navigation">
           <nav>
-            <a class="button services-button delivery-services-button" href="#">Доставка</a>
+            <a class="button services-button services-button-active delivery-services-button" href="#">Доставка</a>
             <a class="button services-button warranty-services-button" href="#">Гарантия</a>
             <a class="button services-button credit-services-button" href="#">Кредит</a>
           </nav>
@@ -248,7 +247,7 @@
               заработаем, поднимая его на ваш этаж.
             </p>
           </li>
-          <!--
+     
         <li class="services-description-item services-description-item-2">
           <h3>Гарантия</h3>
           <p>
@@ -265,7 +264,7 @@
             условия кредита. Выгодные для нашего банка, разумеется.
           </p>
         </li>
-        -->
+ 
         </ul>
       </div>
 
