Защита личного проекта «Девайс»

--- a/catalog.html
+++ b/catalog.html
@@ -179,20 +179,20 @@
         </div>
         <div class="sorting">
           <h3 class="page-catalog-subtitle sorting-subtitle">Сортировка:</h3>
-          <ul class="sorting-item">
-            <li class="sort-by-price">
+          <ul class="sorting-list">
+            <li class="sort-by-price sorting-item sorting-item-bolder">
               <a href="">По цене</a>
             </li>
-            <li class="sort-by-type">
+            <li class="sort-by-type sorting-item sorting-item-bolder">
               <a href="">По типу</a>
             </li>
-            <li class="sort-by-popularity">
+            <li class="sort-by-popularity sorting-item sorting-item-bolder">
               <a href="">По популярности</a>
             </li>
-            <li class="up-dir">
+            <li class="up-dir sorting-item">
               <a href="">Сортировать по возрастанию</a>
             </li>
-            <li class="down-dir">
+            <li class="down-dir sorting-item">
               <a href="">Сортировать по убыванию</a>
             </li>
           </ul>
@@ -240,14 +240,13 @@
                   <button type="button" class="compare add-to-comparison">Добавить к сравнению</button>
                 </div>
               </li>
-              <li class="product-list-item">
+              <li class="product-list-item card-new">
                 <div class="layer-1">
                   <div class="description">
                     <a href="">Селфи-палка «Следуй за<br> мной»</a>
                     <span class="price">1 900 руб.</span>
                   </div>
                   <img src="img/item-4-1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
-                  <span class="new-label"></span>
                 </div>
                 <div class="layer-2">
                   <button type="button" class="button add-to-cart">В корзину</button>
@@ -318,13 +317,13 @@
         <p class="address">г. Москва, ул. Строителей, 15</p>
         <div class="footer-site-navigation-wrapper">
           <ul class="footer-site-navigation">
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Доставка</a>
             </li>
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Гарантия</a>
             </li>
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Контакты</a>
             </li>
           </ul>
