--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
 </head>
-
 <body class="page-body">
 
   <header class="main-header">
@@ -239,26 +238,23 @@
         <ul class="services-description-list services-description-list-1">
           <li class="services-description-item services-description-item-1">
             <h3>Доставка</h3>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо к вашему<br>
-              подъезду совершенно бесплатно! Ведь мы неплохо<br>
-              заработаем, поднимая его на ваш этаж.
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему</p>
+            <p>подъезду совершенно бесплатно! Ведь мы неплохо</p>
+            <p>заработаем, поднимая его на ваш этаж.</p>
             </p>
           </li>
           <li class="services-description-item services-description-item-2">
             <h3>Гарантия</h3>
-            <p>
-              Если из-за возгорания купленного у нас товара у вас сгорит дом —<br>
-              не переживайте, мы выдадим вам новый.<br>
-              Товар, не дом, конечно же.
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом —</p>
+            <p>не переживайте, мы выдадим вам новый.</p>
+            <p>Товар, не дом, конечно же.</p>
             </p>
           </li>
           <li class="services-description-item services-description-item-3">
             <h3>Кредит</h3>
-            <p>
-              Залезть в долговую яму стало проще! Кредитные консультанты<br>
-              подберут для вас наиболее выгодные<br>
-              условия кредита. Выгодные для нашего банка, разумеется.
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты</p>
+            <p>подберут для вас наиболее выгодные</p>
+            <p>условия кредита. Выгодные для нашего банка, разумеется.</p>
             </p>
           </li>
         </ul>
@@ -297,18 +293,14 @@
       <section class="about-us">
         <h2 class="visually-hidden">О компании</h2>
         <h3>О нас</h3>
-        <p>
-          Огромный выбор гаджетов не оставит равнодушным гика,<br>
-          который есть в каждом из нас.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки<br>
-          России! DEVICE работает со многими транспортными компаниями:
-        </p>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика,</p>
+        <p>который есть в каждом из нас.</p>
+        <p class="second-paragraph">Мы можем доставить ваш товар в самые отдаленные точки</p>
+        <p>России! DEVICE работает со многими транспортными компаниями:</p>
         <ul class="logistics">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+          <li class="logistics-item">Деловые линии</li>
+          <li class="logistics-item">Автотрейдинг</li>
+          <li class="logistics-item">ЖелДорЭкспедиция</li>
         </ul>
         <p>
           <a class="button about-company-button" href="">Подробнее о нас</a>
@@ -316,10 +308,8 @@
       </section>
       <section class="contacts-company">
         <h3>Контакты</h3>
-        <p>
-          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
-          проверить работоспособность покупки. Всякое бывает.
-        </p>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете</p>
+        <p>проверить работоспособность покупки. Всякое бывает.</p>
         <a
           href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
           <img class="map" src="img/map-1.png" width="560" height="222" alt="Схема проезда">
@@ -360,13 +350,13 @@
         <p class="address">г. Москва, ул. Строителей, 15</p>
         <div class="footer-site-navigation-wrapper">
           <ul class="footer-site-navigation">
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Доставка</a>
             </li>
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Гарантия</a>
             </li>
-            <li>
+            <li class="footer-site-navigation-item">
               <a href="">Контакты</a>
             </li>
           </ul>
@@ -425,17 +415,17 @@
       <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <ul class="flex-outer">
           <li class="flex-item">
-            <label class="username-label" for="username">Ваше имя:</label><br>
+            <label class="username-label" for="username">Ваше имя:</label>
             <input class="flex-item-input username-input" id="username" type="text" name="name"
               placeholder="Имя Фамилия">
           </li>
           <li class="flex-item">
-            <label class="email-label" for="email">Ваш e-mail:</label><br>
+            <label class="email-label" for="email">Ваш e-mail:</label>
             <input class="flex-item-input email-input" id="email" type="email" name="email"
               placeholder="email@example.com">
           </li>
           <li class="flex-item">
-            <label class="letter-label" for="letter">Текст письма:</label><br>
+            <label class="letter-label" for="letter">Текст письма:</label>
             <textarea class="flex-item-input textarea-letter" id="letter" name="letter" cols="40" rows="7"
               placeholder="В свободной форме"></textarea>
           </li>
